--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>cafe ZENY</title>
     <meta name="description" content="犬連れでも気軽に入れるゼニー市の喫茶店、cafe ZENY公式サイトです">
     <meta name="viewport" content="width=device-width">
-    <link href="./css/index.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
     <script src="./js/toggle-menu.js"></script>
   </head>
   <body>
